--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+  <script src="./src/models/Path.js"></script>
+  <script src="./src/models/Vehicle.js"></script>
   <script src="./script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
 </body>
